# bsb

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  codemeta.json  nx.json  package-lock.json  package.json  project.json  pyproject.toml  test_cli.py
.claude/: CLAUDE.md  package-boilerplate.md  settings.local.json
.claude/skills/hpc-cineca/: SKILL.md
.claude/skills/open-docs/: SKILL.md
.github/workflows/: branch.yml  build.yml  check-api.yml  docs.yml  examples.yml  external_pr.yml  main.yml  pull_request.yml  ruff.yml  wheels.yml
devtools/: bootstrap-linux.sh  bootstrap-mac.sh  bootstrap-windows.ps1  editable-install.txt  install-nest.sh  migrate-issues.ps1  pyproject.toml  test_examples.sh  update_codemeta.py
docs/: conf.py  index.rst  modules.rst
docs/morphologies/: intro.rst
examples/: README.md  project.json  pyproject.toml
examples/atlas-modeling/: README.md  pyproject.toml
examples/atlas-modeling/atlas_modeling/: allen_structure.json  allen_structure.py
examples/atlas-modeling/configs/: allen_structure.json
examples/atlas-modeling/data/: my_cell_density.nrrd
examples/atlas-modeling/scripts/: allen_structure.py
examples/atlas-modeling/tests/: test_examples.py
examples/cell-labeling/: README.md  pyproject.toml
examples/cell-labeling/cell_labeling/: __init__.py  cell_labeling.json  cell_labeling.py  cell_labeling.yaml  label_cells.py
examples/cell-labeling/configs/: cell_labeling.json  cell_labeling.yaml
examples/cell-labeling/scripts/: cell_labeling.py  test_labels.py
examples/cell-labeling/tests/: test_examples.py
examples/distributors/: morphology_generator.py
examples/getting-started/: .gitignore  README.md  pyproject.toml
examples/getting-started/getting_started/: getting_started.yaml  load_data.py
examples/getting-started/scripts/: load_data.py
examples/getting-started/tests/: test_example.py  test_examples.py
examples/include-morphologies/: README.md  pyproject.toml
examples/include-morphologies/configs/: include_morphos.json  include_morphos.yaml
examples/include-morphologies/data/: neuron2.swc  neuron_A.swc
examples/include-morphologies/include_morphologies/: include_morphos.py  include_morphos.yaml  plotting_with_branch_colors.py
examples/include-morphologies/scripts/: include_morphos.py  plotting_with_branch_colors.py
examples/include-morphologies/tests/: test_examples.py
examples/manipulate-morphologies/: README.md  pyproject.toml
examples/manipulate-morphologies/manipulate_morphologies/: __init__.py
examples/manipulate-morphologies/scripts/: labels.py
examples/manipulate-morphologies/tests/: test_examples.py
examples/nest-simulation/: .gitignore  README.md  pyproject.toml
examples/nest-simulation/configs/: guide_nest.yaml
examples/nest-simulation/nest_simulation/: guide_nest.py
examples/nest-simulation/scripts/: analyze_spike_results.py  guide_nest.py  repeated_simulations.py
examples/nest-simulation/tests/: test_examples.py
examples/neuron-simulation/: .gitignore  README.md  pyproject.toml
examples/neuron-simulation/configs/: guide_neuron.json  guide_neuron.yaml
examples/neuron-simulation/data/: Stellate.py
examples/neuron-simulation/neuron_simulation/: analyze_analog_results.py  guide_neuron.json  guide_neuron.py  guide_neuron.yaml
examples/neuron-simulation/scripts/: analyze_analog_results.py  guide_neuron.py
examples/neuron-simulation/tests/: test_examples.py
examples/tutorials/: analyze_spike_results.py
examples/writing-components/: README.md  pyproject.toml
examples/writing-components/configs/: writing_components.json  writing_components.yaml
examples/writing-components/scripts/: writing_components.py
examples/writing-components/tests/: test_examples.py
examples/writing-components/writing_components/: __init__.py  dist_connection.py  distrib_placement.py  writing_components.json  writing_components.py  writing_components.yaml
libs/arborize/: .readthedocs.yaml  CHANGELOG.md  project.json  pyproject.toml
libs/arborize/arborize/: __init__.py  _util.py  constraints.py  definitions.py  exceptions.py  schematic.py  synapse.py
libs/arborize/arborize/builders/: __init__.py  _arbor.py  _neuron.py
libs/arborize/arborize/schematics/: __init__.py  _bsb.py
libs/arborize/docs/: arborize.rst  conf.py
libs/arborize/docs/source/: conf.py  index.rst
libs/arborize/tests/: __init__.py  _shared.py  test_arbor_models.py  test_neuron_models.py  test_optimizations.py  test_schematics.py
libs/arborize/tests/data/: models.py  schematics.py
libs/arborize/tests/data/morphologies/: P75.swc
libs/nmodl-glia/: .readthedocs.yaml  CHANGELOG.md  project.json  pyproject.toml
libs/nmodl-glia/docs/: conf.py  index.rst
libs/nmodl-glia/docs/source/: conf.py
libs/nmodl-glia/glia/: __init__.py  _cli.py  _fs.py  _glia.py  assets.py  exceptions.py  resolution.py
libs/nmodl-glia/glia/packaging/: __init__.py  _ast.py
libs/nmodl-glia/tests/: test_cli.py
libs/nrn-patch/: .readthedocs.yaml  CHANGELOG.md  README.md  project.json  pyproject.toml
libs/nrn-patch/docs/: conf.py  connections.rst  index.rst  patch.rst  sections.rst  usage.rst
libs/nrn-patch/patch/: __init__.py  core.py  error_handler.py  exceptions.py  interpreter.py  objects.py  version.py
libs/nrn-patch/tests/: _shared.py  test_basics.py  test_clamps.py  test_extensions.py  test_interplay.py  test_networks.py  test_parallel.py  test_point_process.py  test_referencing.py
libs/nrn-patch/tests/separate/: test_error_handling.py
libs/sphinxext-bsb/: CHANGELOG.md  project.json  pyproject.toml
libs/sphinxext-bsb/sphinxext/bsb/: __init__.py  project.py
tests/: test_cli.py
