[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bsb"
description = "Black-box component framework for multiscale neural modeling"
authors = [{ name = "Robin De Schepper", email = "robingilbert.deschepper@unipv.it" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
version = "4.0.0b3"
dependencies = [
    "bsb-core==4.0.0b3",
    "bsb-json==0.0.0b3",
    "bsb-yaml==0.0.0b1",
    "bsb-hdf5==1.0.0b1"
]

[project.optional-dependencies]
parallel = ["bsb-core[parallel]"]
plot = ["bsb-plotting==0.0.0b0"]
neuron = ["bsb-neuron==0.0.0b0"]
nest = ["bsb-nest==0.0.0b0"]
arbor = ["bsb-arbor==0.0.0b0"]
test = ["tox~=4.0"]

[tool.setuptools]
packages = []

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    env_list =
        py{39,310,311}-{serial,parallel}
        py311-{arb,nest,neuron}-parallel

    [testenv]
    deps =
        pytest~=7.0
        parallel: mpi4py~=3.0
    extras =
        arb: arbor
        nest: nest
        nrn: neuron
        parallel: parallel
    commands =
        serial: pytest tests
        parallel: mpirun -n 2 pytest tests
"""