[project]
name = "atlas-modeling"
version = "1.0.0"
description = "BSB example on Allen Brain Atlas integration"
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "bsb~=7.0",
]

[dependency-groups]
test = [
    "bsb-test~=7.0",
]

[tool.uv]
default-groups = [ "test" ]

[tool.uv.sources.bsb]
path = "../../packages/bsb"
editable = true

[tool.uv.sources.bsb-test]
path = "../../packages/bsb-test"
editable = true

[tools.bsb]
config = "configs/allen_structure.json"
