[project]
name = "include-morphologies"
version = "1.0.0"
description = "BSB add morphologies example"
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "bsb~=6.0",
    "matplotlib>=3.10.6",
]

[dependency-groups]
test = [
    "bsb-test~=6.0",
]

[tool.uv]
default-groups = [ "test" ]

[tool.uv.sources.bsb]
path = "../../packages/bsb"
editable = true

[tool.uv.sources.bsb-test]
path = "../../packages/bsb-test"
editable = true
