[tool.coverage.run]
branch = true
source = [ "arborize" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = """
 --cov
 --cov-report html:'../../coverage/libs/arborize/html'
 --cov-report xml:'../../coverage/libs/arborize/coverage.xml'
 --html='../../reports/libs/arborize/unittests/html/index.html'
 --junitxml='../../reports/libs/arborize/unittests/junit.xml'
"""

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "arborize"
version = "6.0.0-a1"
authors = [{name = "Robin De Schepper", email = "robingilbert.deschepper@unipv.it"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["description"]
dependencies = ["numpy~=1.21", "errr~=1.2", "morphio>=3.3.6,<4"]
requires-python = ">=3.10"

[project.optional-dependencies]
parallel = ["mpi4py~=3.0"]
bluepyopt = ["bluepyopt~=1.14", "dill>=0.3.8"]
neuron = ["nrn-patch~=6.0", "nmodl-glia[neuron]~=6.0"]
arbor = ["arbor~=0.11", "nmodl-glia[arbor]~=6.0"]
dev = ["sphinx~=8.0", "sphinx-rtd-theme~=2.0"]
test = ["coverage~=7.0"]

[project.urls]
Home = "https://github.com/dbbs-lab/arborize"

[dependency-groups]
dev = [
  "autopep8>=2.3.1",
  "ruff>=0.8.2",
  "pytest>=8.3.4",
  "pytest-sugar>=1.0.0",
  "pytest-cov>=6.0.0",
  "pytest-html>=4.1.1",
]

[tool.ruff]
exclude = [
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "dist",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = []

fixable = ["ALL"]
unfixable = []
