[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "arborize"
version = "6.0.0-a2"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["description"]
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dependencies = ["numpy~=1.21", "errr~=1.2", "morphio>=3.3.6,<4"]

  [[project.authors]]
  name = "Robin De Schepper"
  email = "robin@alexandria.sc"

  [project.license]
  file = "LICENSE"

[project.optional-dependencies]
parallel = ["mpi4py~=3.0"]
bluepyopt = ["bluepyopt~=1.14", "dill>=0.3.8"]
neuron = ["nrn-patch~=6.0", "nmodl-glia[neuron]~=6.0"]
arbor = ["arbor~=0.10", "nmodl-glia[arbor]~=6.0"]
docs = ["sphinx~=8.1", "furo~=2024.0", "docformatter>=1.7.6"]
test = ["coverage~=7.0"]
dev = ["arborize[parallel,bluepyopt,neuron,arbor,docs,test]"]

[dependency-groups]
dev = ["arborize[dev]"]

[tool.uv.sources.nmodl-glia]
path = "../nmodl-glia"
editable = true

[tool.uv.sources.nrn-patch]
path = "../nrn-patch"
editable = true

[tool.flit.module]
name = "arborize"

[tool.coverage.run]
branch = true
source = [ "arborize" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.ruff]
exclude = [ ".ruff_cache", ".svn", ".tox", ".venv", "dist" ]
line-length = 90
indent-width = 4

  [tool.ruff.format]
  quote-style = "double"
  indent-style = "space"
  skip-magic-trailing-comma = false
  line-ending = "auto"
  docstring-code-line-length = "dynamic"

  [tool.ruff.lint]
  select = [ "E", "F", "UP", "B", "SIM", "I" ]
  ignore = [ ]
  fixable = [ "ALL" ]
  unfixable = [ ]

[tool.docformatter]
recursive = true
in-place = true
wrap-summaries = 90
wrap-descriptions = 90
pre-summary-newline = true
make-summary-multi-line = true