[build-system]
requires = [ "flit_core >=3.2,<4" ]
build-backend = "flit_core.buildapi"

[project]
name = "arborize"
version = "7.2.1"
readme = "README.md"
requires-python = ">=3.10,<4"
dynamic = [ "description" ]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]
dependencies = [
  "numpy~=1.21",
  "errr~=1.2",
  "morphio>=3.3.6,<4",
  "bsb-core~=7.0"
]

  [[project.authors]]
  name = "Robin De Schepper"
  email = "robin@alexandria.sc"

  [project.license]
  file = "LICENSE"

  [project.optional-dependencies]
  parallel = [ "mpi4py~=4.1.0" ]
  bluepyopt = [ "bluepyopt~=1.14", "dill>=0.3.8" ]
  neuron = [ "nrn-patch~=7.0", "nmodl-glia[neuron]~=7.0" ]
  arbor = [ "arbor~=0.10", "nmodl-glia[arbor]~=7.0" ]

[dependency-groups]
docs = [
  "sphinx~=8.1",
  "sphinxext-bsb~=7.0",
  "furo~=2024.0",
  "sphinxemoji~=0.3",
  "sphinx-copybutton~=0.5"
]
test = [ "coverage~=7.0" ]
dev = [
  "arborize[parallel,bluepyopt,neuron,arbor]",
  "pre-commit~=3.5",
  "ruff>=0.8.2"
]

[tool.uv]
default-groups = [ "dev", "docs", "test" ]

[tool.uv.sources.sphinxext-bsb]
path = "../sphinxext-bsb"
editable = true

[tool.uv.sources.bsb-core]
path = "../../packages/bsb-core"
editable = true

[tool.uv.sources.nmodl-glia]
path = "../nmodl-glia"
editable = true

[tool.uv.sources.nrn-patch]
path = "../nrn-patch"
editable = true

[tool.flit.module]
name = "arborize"

[tool.coverage.run]
branch = true
source = [ "arborize" ]

[tool.coverage.report]
exclude_lines = [ "if typing.TYPE_CHECKING:", "pragma: nocover" ]
show_missing = true

[tool.ruff]
exclude = [ ".ruff_cache", ".svn", ".tox", ".venv", "dist" ]
line-length = 90
indent-width = 4

  [tool.ruff.format]
  quote-style = "double"
  indent-style = "space"
  skip-magic-trailing-comma = false
  line-ending = "auto"
  docstring-code-format = true
  docstring-code-line-length = 90

  [tool.ruff.lint]
  select = [ "E", "F", "UP", "B", "SIM", "I" ]
  ignore = [ ]
  fixable = [ "ALL" ]
  unfixable = [ ]
