[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nmodl-glia"
version = "6.0.0-a1"
authors = [{name = "Robin De Schepper", email = "robingilbert.deschepper@unipv.it"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["description"]
dependencies= [
    "click~=8.0",
    "appdirs~=1.0",
    "errr~=1.2",
    "cookiecutter~=2.0",
    "black>=24.0",
    "toml~=0.10",
    "neuron>=8.2.6; sys_platform != 'win32'",
    "importlib_metadata~=6.5"
]

[project.scripts]
glia = "glia._cli:glia"

[project.optional-dependencies]
parallel = [
    "mpi4py~=3.0",
]
neuron = [
    "nrn-patch~=6.0"
]
arbor = [
    "arbor~=0.10"
]
docs = [
    "sphinx~=8.1",
    "furo~=2024.0",
    "sphinxemoji~=0.2",
    "sphinx_design~=0.5",
    "sphinx-copybutton~=0.5",
]
test = [
    "nmodl-glia[parallel]",
    "coverage~=7.0"
]
dev = [
    "nmodl-glia[neuron,arbor,test,docs]",
    "pre-commit~=3.5",
]

[dependency-groups]
dev = [
    "nmodl-glia[dev]"
]

[tool.uv.sources.nrn-patch]
path = "../nrn-patch"
editable = true

[tool.flit.module]
name = "glia"

[tool.coverage.run]
branch = true
source = [ "nmodl_glia" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.ruff]
exclude = [ ".ruff_cache", ".svn", ".tox", ".venv", "dist" ]
line-length = 90
indent-width = 4

  [tool.ruff.format]
  quote-style = "double"
  indent-style = "space"
  skip-magic-trailing-comma = false
  line-ending = "auto"
  docstring-code-line-length = "dynamic"

  [tool.ruff.lint]
  select = [ "E", "F", "UP", "B", "SIM", "I" ]
  ignore = [ ]
  fixable = [ "ALL" ]
  unfixable = [ ]

[tool.docformatter]
recursive = true
in-place = true
wrap-summaries = 90
wrap-descriptions = 90
pre-summary-newline = true
make-summary-multi-line = true
